[gd_scene load_steps=8 format=2]

[ext_resource path="res://Player/player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Player.png" type="Texture" id=2]
[ext_resource path="res://Player/Spear.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/Footsteps/Lower Footsteps/Grass/Walking_Grass_4_Moser.wav" type="AudioStream" id=4]
[ext_resource path="res://Player/health.gd" type="Script" id=5]
[ext_resource path="res://Assets/tmp heart.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.5, 7.75 )

[node name="player" type="KinematicBody2D" groups=["player"]]
pause_mode = 1
collision_layer = 66
collision_mask = 65
collision/safe_margin = 0.04
script = ExtResource( 1 )
spearScene = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 1 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 35, 1, 10, 31 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
process_mode = 0
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_speed = 3.0
drag_margin_left = 0.5
drag_margin_top = 0.6
drag_margin_right = 0.5
drag_margin_bottom = 0.4

[node name="hud" type="CanvasLayer" parent="Camera2D"]

[node name="debugInf" type="Label" parent="Camera2D/hud"]
margin_left = 281.0
margin_top = 3.0
margin_right = 397.0
margin_bottom = 17.0
text = "some coords here"

[node name="health" type="Control" parent="Camera2D/hud"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="hearts" type="TextureRect" parent="Camera2D/hud/health"]
margin_right = 503.0
margin_bottom = 503.0
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 6 )
stretch_mode = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 0.75 )
shape = SubResource( 1 )

[node name="timer" type="Timer" parent="."]
process_mode = 0
wait_time = 0.2
one_shot = true

[node name="dashCooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="feet" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -18.656

[node name="spearCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="health_changed" from="." to="Camera2D/hud/health" method="_on_player_health_changed"]
[connection signal="timeout" from="timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="dashCooldown" to="." method="_on_dashCooldown_timeout"]
[connection signal="timeout" from="spearCooldown" to="." method="_on_spearCooldown_timeout"]
